# apabbs

./: .env  .env.example  .envrc.example  .gitignore  CHANGELOG  Cargo.toml  README  README.md  package-lock.json  package.json
db/: schema.sql
migrations/: 20240419022413_add_initial_schema.sql  20240419024758_add_admin_to_user.sql  20240419032355_create_index_on_users_username.sql  20240419033325_change_username_to_varchar.sql  20240419042436_add_status_to_posts.sql  20240420032550_add_case_insensitive_username_idx.sql  20240420043554_make_username_uniqueness_case_insensitive.sql  20240423021956_add_anon_uuid_to_posts.sql  20240424010453_add_cache_fields_to_posts.sql  20240424175511_add_hidden_flag_to_post.sql  20240428045113_add_ip_to_posts.sql  20240428051425_add_ip_to_users.sql  20240428052217_add_ip_bans.sql  20240501033137_hash_ips.sql  20240504211849_use_sha256_ip_hash.sql  20240505004955_rename_users_to_accounts.sql  20240505015733_add_post_status_enum.sql  20240505165018_add_uuid_to_posts.sql  20240505173225_rename_anon_uuid_to_anon_token.sql  20240505173509_rename_created_at_ip_idx_to_created_at_ip_hash_index.sql  20240518023401_add_anon_to_accounts.sql  20240520165551_add_expiration_to_bans.sql  20240601013046_add_time_zone_to_posts_created_at.sql  20240621031737_add_image_name_to_posts.sql  20240623040417_generate_uuid_in_rust.sql  20240815041254_increase_image_name_length.sql  20240816011922_add_video.sql  20240817022313_add_html_links_to_old_posts.sql  20240817070157_rename_to_file_name.sql  20240818090814_embed_youtube.sql  20240824015705_remove_iframe_sizes.sql  20240824031056_remove_newlines.sql  20240824043859_add_lazy_loading.sql  20240826042152_add_banned_to_post_status_enum.sql  20240907014705_add_post_uri.sql  20240907014705_add_pub_id.sql  20240907014705_rename_posts_uuid_to_pub_id.sql  20240907014705_replace_post_uuid_with_pub_id.sql  20240907031501_convert_all_pub_ids.sql  20240914225430_fix_double_quotes_on_yt_embeds.sql  (+81 more)
migrations/shell/: 20250206110338_generate_thumbnails.sh  20250213053945_generate_webp_thumbnails.sh  download_yt_thumbnails.sh  pub_id.sh  safer_uri.sh  thumbnails.sh  uuid_to_uri.sh
pub/: 502.txt  script.js  scrollbar.css  style.css
script/: chrome-cleanup.sh  deploy.sh  reload.sh  schema.sh  snap.sh  sync.sh
script/migrate/: thumbnails.sh
src/: ban.rs  cron.rs  crypto.rs  jobs.rs  lib.rs  main.rs  migrate.rs  post.rs  router.rs  routes.rs  user.rs  utils.rs  validation.rs
src/post/: media.rs  review.rs  submission.rs
src/post/media/: encryption.rs  images.rs  video.rs  videos.rs
src/post/submission/: youtube.rs
src/router/: auth.rs  errors.rs  helpers.rs  moderation.rs  posts.rs  profile.rs  submission.rs  tests.rs  websocket.rs
templates/: index.jinja  layout.jinja  login.jinja  media.jinja  pending_account.jinja  post.jinja  profile.jinja  register.jinja  review.jinja  settings.jinja  solo.jinja  spam.jinja  user.jinja
tests/: account.rs  accounts.rs  auth.rs  cron.rs  helpers.rs  moderation.rs  posts.rs  profile.rs
tests/media/: other.txt
