[package]
name = "apabbs"
version = "0.8.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sqlx]
version = "*"
features = ["postgres", "runtime-tokio-rustls", "time"]

[dependencies]
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["form", "ws", "macros", "multipart"] }
axum-extra = { version = "*", features = ["cookie"] }
dotenv = "*"
tower-http = { version = "*", features = ["trace"] }
tracing = "*"
tracing-subscriber = "*"
minijinja = { version = "*", features = ["loader"] }
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
argon2 = "*"
regex = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics"] }
sha256 = "*"
tokio-cron-scheduler = "*"
tokio-util = { version = "*", features = ["io"] }
cocoon = "*"

[dev-dependencies]
tower = { version = "*", features = ["util"] }
http-body-util = "*"
serde_urlencoded = "*"
form-data-builder = "*"
