[package]
name = "apabbs"
version = "0.29.0"
edition = "2024"

[profile.release]
opt-level = "z" # Optimize for size

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "*", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "*", features = ["full"] }
axum = { version = "*", features = ["form", "ws", "macros", "multipart"] }
axum-extra = { version = "*", features = ["cookie"] }
dotenv = "*"
tower-http = { version = "*", features = ["trace"] }
tracing = "*"
tracing-subscriber = "*"
minijinja = { version = "*", features = ["loader", "urlencode"] }
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "*"
uuid = { version = "*", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
sha256 = "*"
tokio-cron-scheduler = "*"
tokio-util = { version = "*", features = ["io"] }

[dev-dependencies]
tower = { version = "*", features = ["util"] }
http-body-util = "*"
serde_urlencoded = "*"
form-data-builder = "*"
